@@ -428,6 +428,7 @@ fi
 dnl Checks for programs.
 echo
 echo "***** Programs ***************"
+FW_GMAKE
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_CPP
