@@ -60,7 +60,7 @@ Buildroot: %{_tmppath}/%{name}-root
 	%define exampledir %{_datadir}/examples/%{name}-%{version}
 %endif
 
-BuildRequires: rudiments-devel >= 0.28.1
+BuildRequires: rudiments-devel >= 0.33
 %{!?_without_mysql:BuildRequires: ,mysql-devel}
 %{!?_without_odbc:BuildRequires: ,unixODBC-devel}
 %{!?_without_postgresql:BuildRequires: ,postgresql-devel}
